tests/ui/lexer/emoji-in-lifetime.stderr
error: lifetimes cannot contain emoji
  --> $DIR/emoji-in-lifetime.rs:2:22
   |
LL | fn bad_lifetime_name<'рџђ›рџђ›рџђ›familyрџ‘Ёрџ‘©рџ‘§рџ‘¦>(_: &'рџђ›рџђ›рџђ›familyрџ‘Ёрџ‘©рџ‘§рџ‘¦ ()) {}
   |                      ^^^^^^^^^^^^^^^^^^^^^

error: lifetimes cannot contain emoji
  --> $DIR/emoji-in-lifetime.rs:2:45
   |
LL | fn bad_lifetime_name<'рџђ›рџђ›рџђ›familyрџ‘Ёрџ‘©рџ‘§рџ‘¦>(_: &'рџђ›рџђ›рџђ›familyрџ‘Ёрџ‘©рџ‘§рџ‘¦ ()) {}
   |                                                 ^^^^^^^^^^^^^^^^^^^^^

error: lifetimes cannot contain emoji
  --> $DIR/emoji-in-lifetime.rs:6:5
   |
LL |     'рџђ›: {
   |     ^^^

error: aborting due to 3 previous errors

